# nba_analysis

./: .gitattributes  .gitignore  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: update_feature_store.yaml
data/: jokic_murray_ids.txt  nba_players.csv  nba_teams.csv
jokic_murray/: README.md  eda.ipynb  etl.ipynb  model_data.csv  modeling.ipynb  nuggets_2016_17_2022_23_j_m.csv
notebooks/: config_nb.py  ingest_feature_store.ipynb
src/: config.py  cron_job.txt  data.py  feature_store.py  fetch_data.py  fetch_data_cron.py  fetch_data_cron.sh  metadata.json  modeling.py  streamlit_app.py  utils.py
